--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="navbar">
         <div class="logo" onclick="showHome()">
-            <img src="IMG/logo.png" alt="Logo Edilkappa" />
+            <img src="img/logo.png" alt="Logo Edilkappa" />
             <span>Edilkappa</span>
         </div>
         <button class="hamburger" aria-label="Apri menu" onclick="toggleMenu()">☰</button>
