Update index.html (from I to id for feedback)

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </section>
 
-        <section class="feedback-section" I="feedback" style="display:none;">
+        <section class="feedback-section" id="feedback" style="display:none;">
             <h2>La tua opinione è importante</h2>
             <p><i>(ti consigliamo di lasciare il feedback una volta che il lavoro è stato completato per intero)</i></p>
             <form id="feedbackForm" class="form-card">
