Update index.html (added image to carousel)

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                 <img src="img/impianto-idraulico-merged.png" onclick="openImagePopup(this.src)" />
                 <p>Riparazione dell'impianto idraulico</p>
               </div>
+              <div class="carousel-card">
+                <h3>Rifacimento copertura</h3>
+                <img src="img/rifacimento-copertura-1" onclick="openImagePopup(this.src)" />
+                <p>Rifacimento copertura</p>
+              </div>
             </div>
           </div>
           <button class="carousel-btn next" onclick="moveCarousel(1)" aria-label="Successivo">
