Update index.html (added image to carousel)

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </div>
               <div class="carousel-card">
                 <h3>Rifacimento copertura</h3>
-                <img src="img/rifacimento-copertura-1.jpg" onclick="openImagePopup(this.src)" />
+                <img src="img/rifacimento-copertura-1.jpeg" onclick="openImagePopup(this.src)" />
                 <p>Rifacimento copertura</p>
               </div>
             </div>
