Update index.html (updated some texts)

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         </div>
       </section>
       <section class="my-requests-section" id="myRequests" style="display:none;">
-        <h2>Le Mie Richieste di Assistenza</h2>
+        <h2>Le mie richieste di assistenza</h2>
         <div id="my-requests-list"></div>
       </section>
       <section class="past-jobs-section" id="pastJobs" style="display:none;">
-        <h2>I Nostri Lavori Recenti</h2>
+        <h2>I nostri lavori recenti</h2>
         <div class="carousel-container">
           <button class="carousel-btn prev" onclick="moveCarousel(-1)" aria-label="Precedente">
             <i class="fas fa-chevron-left"></i>
@@ -78,12 +78,12 @@
           <div class="carousel-track-container">
             <div class="carousel-track">
               <div class="carousel-card active">
-                <h3>Ristrutturazione Bagno</h3>
+                <h3>Ristrutturazione bagno</h3>
                 <img src="img/ristrutturazione-bagno-merged.png" onclick="openImagePopup(this.src)" />
                 <p>Rifacimento completo del bagno</p>
               </div>
               <div class="carousel-card">
-                <h3>Impianto Idraulico</h3>
+                <h3>Impianto idraulico</h3>
                 <img src="img/impianto-idraulico-merged.png" onclick="openImagePopup(this.src)" />
                 <p>Riparazione dell'impianto idraulico</p>
               </div>
@@ -101,7 +101,7 @@
       </section>
       <section class="feedback-section" id="feedback" style="display:none;">
         <h2>La tua opinione è importante</h2>
-        <p>
+        <p align="center">
           <i>(ti consigliamo di lasciare il feedback una volta che il lavoro è stato completato per intero)</i>
         </p>
         <form id="feedbackForm" class="form-card">
