Update index.html (added image & descriptions to carousel)

--- a/index.html
+++ b/index.html
@@ -88,9 +88,74 @@
                 <p>Riparazione dell'impianto idraulico</p>
               </div>
               <div class="carousel-card">
-                <h3>Rifacimento copertura</h3>
+                <h3>Copertura</h3>
                 <img src="img/rifacimento-copertura-1.jpeg" onclick="openImagePopup(this.src)" />
                 <p>Rifacimento copertura</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Rivestimento/h3>
+                <img src="img/rivestimenti-1.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rivestimento pavimentazione con piastrelle</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Copertura</h3>
+                <img src="img/rifacimento-copertura-2.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rifacimento copertura</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Copertura</h3>
+                <img src="img/rifacimento-copertura-3.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rifacimento copertura</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Copertura</h3>
+                <img src="img/rifacimento-copertura-4.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rifacimento copertura</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Copertura</h3>
+                <img src="img/rifacimento-copertura-5.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rifacimento copertura</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Copertura</h3>
+                <img src="img/rifacimento-copertura-6.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rifacimento copertura</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Rivestimento grondaia</h3>
+                <img src="img/rifacimento-copertura-9.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rifacimento del rivestimento di una grondaia</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Cartongesso</h3>
+                <img src="img/cartongesso-1.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Installazione cartongesso</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Copertura</h3>
+                <img src="img/rifacimento-copertura-10.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rifacimento copertura</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Cartongesso</h3>
+                <img src="img/cartongesso-2.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Installazione cartongesso</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Copertura</h3>
+                <img src="img/rifacimento-copertura-11.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rifacimento copertura</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Rivestimento</h3>
+                <img src="img/rivestimenti-2.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Rivestimento con piastrelle delle pareti di una doccia</p>
+              </div>
+              <div class="carousel-card">
+                <h3>Cartongesso</h3>
+                <img src="img/cartongesso-3.jpeg" onclick="openImagePopup(this.src)" />
+                <p>Cartongesso in corso di installazione</p>
               </div>
             </div>
           </div>
