--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p>Rifacimento copertura</p>
               </div>
               <div class="carousel-card">
-                <h3>Rivestimento/h3>
+                <h3>Rivestimento</h3>
                 <img src="img/rivestimenti-1.jpeg" onclick="openImagePopup(this.src)" />
                 <p>Rivestimento pavimentazione con piastrelle</p>
               </div>
