--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
           <i class="fas fa-map-marker-alt"></i> Via S.Ambrogio 38, Vimodrone (MI)
         </p>
       </div>
+      <div class="footer-bottom"> <a href="admin.html" target="_blank">Entra come Amministratore</a> </div>
       <div class="footer-bottom"> &copy; 2025 <strong>Edilkappa</strong>. Tutti i diritti riservati. </div>
     </footer>
     <script src="script.js"></script>
